// ------------------------------------------------------------
// Copyright (c) Microsoft Corporation.  All rights reserved.
// Licensed under the MIT License (MIT). See License in the repo root for
// license information.
// ------------------------------------------------------------

syntax = "proto3";

package rplctr_rpc;

message empty_payload{}

message data_request{
  bytes data = 1;
  int64 sn = 2;
}

message sn_request{
  int64 sn = 1;
}

message replicate_response{
  int64 sn = 1;
  // bool ack = 2;
}

service rplctr_service {
  // primary send data to secondary
  // primary uses the client and secondary is the server
  rpc replicate(data_request) returns (replicate_response){}

  // sencondary send to primary ack of sn.
  rpc ack(sn_request) returns (empty_payload){}
}